--- a/.github/workflows/sync-package.yml
+++ b/.github/workflows/sync-package.yml
@@ -31,6 +31,9 @@ jobs:
           python -m pip install --upgrade hatch
       - name: Build distribution
         run: hatch build
+      - name: Check pypi versions
+        uses: maybe-hello-world/pyproject-check-version@v4
+        id: versioncheck
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -39,13 +42,13 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
       - name: Copy tar gz build file to s3
         run: |
-          aws s3 cp ./dist/aws_durable_execution_sdk_python-0.0.1.tar.gz \
+          aws s3 cp ./dist/aws_durable_execution_sdk_python_testing-${{ steps.versioncheck.outputs.local_version }}.tar.gz \
             s3://${{ env.BUCKET_NAME }}/
       - name: commit tar gz to Gitfarm
         run: |
           aws lambda invoke \
             --function-name ${{ secrets.SYNC_LAMBDA_ARN }} \
-            --payload '{"gitFarmRepo":"${{ secrets.GITFARM_LAN_SDK_REPO }}","gitFarmBranch":"${{ secrets.GITFARM_LAN_SDK_BRANCH }}","gitFarmFilepath":"aws_durable_execution_sdk_python-0.0.1-testing.tar.gz","s3Bucket":"${{ secrets.S3_BUCKET_NAME }}","s3FilePath":"aws_durable_execution_sdk_python-0.0.1.tar.gz"}' \
+            --payload '{"gitFarmRepo":"${{ secrets.GITFARM_LAN_SDK_REPO }}","gitFarmBranch":"${{ secrets.GITFARM_LAN_SDK_BRANCH }}","gitFarmFilepath":"aws_durable_execution_sdk_python_testing-${{ steps.versioncheck.outputs.local_version }}.tar.gz","s3Bucket":"${{ secrets.S3_BUCKET_NAME }}","s3FilePath":"aws_durable_execution_sdk_python_testing-${{ steps.versioncheck.outputs.local_version }}.tar.gz"}' \
             --cli-binary-format raw-in-base64-out \
             output.txt
       - name: Check for error in lambda invoke
