--- a/.github/workflows/sync-package.yml
+++ b/.github/workflows/sync-package.yml
@@ -39,8 +39,9 @@ jobs:
       - name: Get tar gz name 
         id: tar_gz_name
         run: |
-          TAR_GZ_NAME=$(ls dist/*.tar.gz)
+          TAR_GZ_NAME=$(ls *.tar.gz)
           echo "tar_gz_name=$TAR_GZ_NAME" >> $GITHUB_OUTPUT
+        working-directory: dist
       - name: Copy tar gz build file to s3
         run: |
           aws s3 cp ./dist/${{steps.tar_gz_name.outputs.tar_gz_name}} \
