--- a/.github/workflows/sync-package.yml
+++ b/.github/workflows/sync-package.yml
@@ -2,7 +2,7 @@ name: Sync package
 
 on:
   push:
-    branches: [ "main", "sync-package" ]
+    branches: [ "main" ]
 env:
   AWS_REGION : "us-west-2"
 
