--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -56,7 +56,7 @@ jobs:
       #
       # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
       # ALTERNATIVE: exactly, uncomment the following line instead:
-      url: https://test.pypi.org/project/aws-durable-execution-sdk-python-testing/${{ github.event.release.name }}
+      url: https://pypi.org/project/aws-durable-execution-sdk-python-testing/${{ github.event.release.name }}
 
     steps:
       - name: Retrieve release distributions
@@ -68,5 +68,4 @@ jobs:
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository-url: https://test.pypi.org/legacy/
           packages-dir: dist/
