--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "aws-durable-execution-sdk-python-testing"
-version = "0.0.0"
+version = "0.0.1-alpha"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/foo"]
