Add Python examples deployment infrastructure
- Add examples catalog with hello_world function
- Add build script to copy SDK dependencies from hatch environment
- Add deployment script with AWS Lambda integration
- Add SAM template for local testing
- Add GitHub workflow for automated deployment
- Add hatch examples environment with build/deploy/clean commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,18 @@ test = "pytest tests/ -v"
 examples = "pytest examples/test/ -v"
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/aws_durable_execution_sdk_python_testing --cov-fail-under=96"
 
+[tool.hatch.envs.examples]
+dependencies = [
+  "boto3",
+  "aws_durable_execution_sdk_python @ {env:AWS_DURABLE_SDK_URL:git+ssh://git@github.com/aws/aws-durable-execution-sdk-python.git}",
+]
+[tool.hatch.envs.examples.scripts]
+build = "python examples/build.py"
+deploy = "cd examples && python deploy.py {args}"
+sam-build = "build && sam build --template examples/template.yaml"
+sam-invoke = "sam local invoke HelloWorldFunction --template examples/template.yaml"
+clean = "rm -rf examples/build examples/.aws-sam examples/*.zip"
+
 [tool.hatch.envs.types]
 extra-dependencies = ["mypy>=1.0.0", "pytest"]
 [tool.hatch.envs.types.scripts]
