--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -30,6 +30,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Setup SSH Agent
+      uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
@@ -88,6 +93,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Setup SSH Agent
+      uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     
     - name: Setup Python
       uses: actions/setup-python@v4
