--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -31,9 +31,9 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Setup SSH Agent
-      uses: webfactory/ssh-agent@v0.9.0
+      uses: webfactory/ssh-agent@v0.9.1
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-private-key: ${{ secrets.SDK_KEY }}
     
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -97,7 +97,9 @@ jobs:
     - name: Setup SSH Agent
       uses: webfactory/ssh-agent@v0.9.0
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-private-key: |
+          ${{ secrets.LANGUAGE_SDK_SSH_PRIVATE_KEY }}
+          ${{ secrets.TESTING_SSH_PRIVATE_KEY }}
     
     - name: Setup Python
       uses: actions/setup-python@v4
