--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,18 @@ test = "pytest tests/ -v"
 examples = "pytest examples/test/ -v"
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/aws_durable_execution_sdk_python_testing --cov-fail-under=96"
 
+[tool.hatch.envs.examples]
+dependencies = [
+  "boto3",
+  "aws_durable_execution_sdk_python @ {env:AWS_DURABLE_SDK_URL:git+ssh://git@github.com/aws/aws-durable-execution-sdk-python.git}",
+]
+[tool.hatch.envs.examples.scripts]
+build = "python examples/build.py"
+deploy = "cd examples && python deploy.py {args}"
+sam-build = "build && sam build --template examples/template.yaml"
+sam-invoke = "sam local invoke HelloWorldFunction --template examples/template.yaml"
+clean = "rm -rf examples/build examples/.aws-sam examples/*.zip"
+
 [tool.hatch.envs.types]
 extra-dependencies = ["mypy>=1.0.0", "pytest"]
 [tool.hatch.envs.types.scripts]
@@ -120,6 +132,10 @@ lines-after-imports = 2
   "PLR2004",
   "SIM117",
   "TRY301",
+]
+"examples/*.py" = [
+  "T201",  # Allow print statements in deployment scripts
+  "PLR2004",  # Allow magic values in deployment scripts
 ]
 "src/aws_durable_execution_sdk_python_testing/invoker.py" = [
   "A002", # Argument `input` is shadowing a Python builtin
