--- a/examples/template.yaml
+++ b/examples/template.yaml
@@ -1,6 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-
 Globals:
   Function:
     Runtime: python3.13
@@ -8,17 +7,103 @@ Globals:
     MemorySize: 128
     Environment:
       Variables:
-        DEX_ENDPOINT: !Ref LambdaEndpoint
-
+        DEX_ENDPOINT:
+          Ref: LambdaEndpoint
 Parameters:
   LambdaEndpoint:
     Type: String
-    Default: "https://lambda.us-west-2.amazonaws.com"
-
+    Default: https://lambda.us-west-2.amazonaws.com
 Resources:
-  HelloWorldFunction:
+  Helloworld.HandlerFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: build/
-      Handler: hello_world.handler
+      Handler: hello_world.handler.handler
       Description: A simple hello world example with no durable operations
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Step.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: step.handler.handler
+      Description: Basic usage of context.step() to checkpoint a simple operation
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Stepwithname.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: step_with_name.handler.handler
+      Description: Step operation with explicit name parameter
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Stepwithretry.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: step_with_retry.handler.handler
+      Description: Usage of context.step() with retry configuration for fault tolerance
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Wait.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait.handler.handler
+      Description: Basic usage of context.wait() to pause execution
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Callback.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: callback.handler.handler
+      Description: Basic usage of context.create_callback() to create a callback for
+        external systems
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Waitforcallback.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback.handler.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Runinchildcontext.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: run_in_child_context.handler.handler
+      Description: Usage of context.run_in_child_context() to execute operations in
+        isolated contexts
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Parallel.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: parallel.handler.handler
+      Description: Executing multiple durable operations in parallel
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  Mapoperations.HandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: map_operations.handler.handler
+      Description: Processing collections using map-like durable operations
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
